[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Squish/Squish.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Squish/Squish.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Squish" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="0"]
autoplay = "Walk"
anims/RESET = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 2

[node name="LeftWallRayCast" parent="." index="2"]
position = Vector2( 0, -2 )
cast_to = Vector2( -7, 0 )

[node name="RightWallRayCast" parent="." index="3"]
position = Vector2( 0, -2 )
cast_to = Vector2( 7, 0 )

[node name="LeftFloorRayCast" parent="." index="4"]
position = Vector2( -8, -2 )

[node name="RightFloorRayCast" parent="." index="5"]
position = Vector2( 8, -2 )

[node name="CollisionShape2D" parent="." index="6"]
position = Vector2( 0, -8 )
